# BioKey

./: .gitignore  README.md  run_local.bat  run_local.ps1  verify_auth.rb
.github/workflows/: ci.yml
android-client/: build.gradle  build.gradle.kts  settings.gradle.kts
android-client/app/: build.gradle  build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-client/app/src/main/res/drawable/: ic_launcher_foreground.xml
backend-server/: Gemfile  app.rb
backend-server/config/: database.yml  database.yml.example
backend-server/db/: migrate.rb
backend-server/db/migrations/: 000_base_schema.sql  001_phase9_hardening.sql  002_phase11_dashboard_eval.sql  003_access_logs_request_context.sql  004_typing_capture_events.sql
backend-server/lib/: auth_service.rb  dashboard_service.rb  evaluation_service.rb  math_engine.rb
backend-server/public/: dashboard.css  dashboard.js  prototype.css  prototype.js
backend-server/test/: auth_service_test.rb  evaluation_service_test.rb  integration_api_test.rb  test_helper.rb
backend-server/views/: admin_dashboard.erb  admin_login.erb  prototype_feed.erb  prototype_login.erb
database/: docker-compose.yml  schema.sql
docs/: dashboard.md  evaluation.md
native-engine/: Makefile
native-engine/src/: biometric_math.c
tools/: decrypt_db_backup.rb  encrypt_db_backup.rb  evaluate_dataset.rb  export_dataset.rb  export_typing_dataset.rb  generate_human_synthetic_40.rb  live_demo_2min.rb  mock_load_20_users.rb
(+16 files in other folders)
